--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "mongoose": "^8.1.1",
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "sweetalert2": "^11.10.5"
   }
 }
